z-index for filters fix

--- a/app/assets/stylesheets/properties.scss
+++ b/app/assets/stylesheets/properties.scss
@@ -189,7 +189,7 @@
       width: 100%;
       height: calc(100vh - 60px - 62px);
       overflow-y: auto;
-      //z-index: 10;
+      z-index: 10;
       padding: 1.25rem;
 
       form {
